--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_REACT_APP_BACKEND_BASEURL = http://localhost:5000
+VITE_REACT_APP_BACKEND_BASEURL = https://task-management-backend-rsr8.onrender.com/
