--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_REACT_APP_BACKEND_BASEURL = https://task-management-backend-rsr8.onrender.com/
+VITE_REACT_APP_BACKEND_BASEURL = https://task-management-backend-rsr8.onrender.com
+
